third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/copy_full_invalid.no-opt.exp

Diagnostics:
error: cannot copy local `x` which is still mutably borrowed
   ┌─ tests/reference-safety/v1-tests/copy_full_invalid.move:13:9
   │
12 │         let f = &mut x;
   │                 ------ local `x` previously mutably borrowed here
13 │         x + 0;
   │         ^^^^^ copy attempted here
14 │         *f;
   │         -- conflicting reference `f` used here

error: cannot copy local `x` which is still mutably borrowed
   ┌─ tests/reference-safety/v1-tests/copy_full_invalid.move:19:9
   │
18 │         let f = id_mut(&mut x);
   │                 -------------- local `x` previously mutably borrowed here
19 │         x + 0;
   │         ^^^^^ copy attempted here
20 │         *f;
   │         -- conflicting reference `f` used here
